# cpython-meson

./: filelist.txt  meson.build
Python/frozen_modules/: meson.build
pyconfig/: meson.build
