project('cpython', 'c',
  version: '3.12.0',
  license: 'PSFL',
  default_options: [],
)

py_include_dirs = include_directories(
  '.',
  'Include',
  'Include/internal',
)

py_sources = files(
  # 'Objects/abstract.c',
  # 'Objects/boolobject.c',
  # 'Objects/bytearrayobject.c',
  # 'Objects/bytes_methods.c',
  # 'Objects/bytesobject.c',
  # 'Objects/call.c',
  # 'Objects/capsule.c',
  # 'Objects/cellobject.c',
  # 'Objects/classobject.c',
  # 'Objects/clinic/bytearrayobject.c.h',
  # 'Objects/clinic/bytesobject.c.h',
  # 'Objects/clinic/classobject.c.h',
  # 'Objects/clinic/codeobject.c.h',
  # 'Objects/clinic/complexobject.c.h',
  # 'Objects/clinic/descrobject.c.h',
  # 'Objects/clinic/dictobject.c.h',
  # 'Objects/clinic/enumobject.c.h',
  # 'Objects/clinic/floatobject.c.h',
  # 'Objects/clinic/funcobject.c.h',
  # 'Objects/clinic/listobject.c.h',
  # 'Objects/clinic/longobject.c.h',
  # 'Objects/clinic/memoryobject.c.h',
  # 'Objects/clinic/moduleobject.c.h',
  # 'Objects/clinic/odictobject.c.h',
  # 'Objects/clinic/setobject.c.h',
  # 'Objects/clinic/structseq.c.h',
  # 'Objects/clinic/tupleobject.c.h',
  # 'Objects/clinic/typeobject.c.h',
  # 'Objects/clinic/typevarobject.c.h',
  # 'Objects/clinic/unicodeobject.c.h',
  # 'Objects/codeobject.c',
  # 'Objects/complexobject.c',
  # 'Objects/descrobject.c',
  # 'Objects/dictobject.c',
  # 'Objects/enumobject.c',
  # 'Objects/exceptions.c',
  # 'Objects/fileobject.c',
  # 'Objects/floatobject.c',
  # 'Objects/frameobject.c',
  # 'Objects/funcobject.c',
  # 'Objects/genericaliasobject.c',
  # 'Objects/genobject.c',
  # 'Objects/iterobject.c',
  # 'Objects/listobject.c',
  # 'Objects/longobject.c',
  # 'Objects/memoryobject.c',
  # 'Objects/methodobject.c',
  # 'Objects/mimalloc/alloc-aligned.c',
  # 'Objects/mimalloc/alloc-override.c',
  # 'Objects/mimalloc/alloc-posix.c',
  # 'Objects/mimalloc/alloc.c',
  # 'Objects/mimalloc/arena.c',
  # 'Objects/mimalloc/bitmap.c',
  # 'Objects/mimalloc/bitmap.h',
  # 'Objects/mimalloc/heap.c',
  # 'Objects/mimalloc/init.c',
  # 'Objects/mimalloc/options.c',
  # 'Objects/mimalloc/os.c',
  # 'Objects/mimalloc/page-queue.c',
  # 'Objects/mimalloc/page.c',
  # 'Objects/mimalloc/prim/osx/alloc-override-zone.c',
  # 'Objects/mimalloc/prim/osx/prim.c',
  # 'Objects/mimalloc/prim/prim.c',
  # 'Objects/mimalloc/prim/unix/prim.c',
  # 'Objects/mimalloc/prim/wasi/prim.c',
  # 'Objects/mimalloc/prim/windows/etw.h',
  # 'Objects/mimalloc/prim/windows/prim.c',
  # 'Objects/mimalloc/random.c',
  # 'Objects/mimalloc/segment-map.c',
  # 'Objects/mimalloc/segment.c',
  # 'Objects/mimalloc/static.c',
  # 'Objects/mimalloc/stats.c',
  # 'Objects/moduleobject.c',
  # 'Objects/namespaceobject.c',
  # 'Objects/object.c',
  # 'Objects/obmalloc.c',
  # 'Objects/odictobject.c',
  # 'Objects/picklebufobject.c',
  # 'Objects/rangeobject.c',
  # 'Objects/setobject.c',
  # 'Objects/sliceobject.c',
  # 'Objects/stringlib/asciilib.h',
  # 'Objects/stringlib/clinic/transmogrify.h.h',
  # 'Objects/stringlib/codecs.h',
  # 'Objects/stringlib/count.h',
  # 'Objects/stringlib/ctype.h',
  # 'Objects/stringlib/eq.h',
  # 'Objects/stringlib/fastsearch.h',
  # 'Objects/stringlib/find.h',
  # 'Objects/stringlib/find_max_char.h',
  # 'Objects/stringlib/join.h',
  # 'Objects/stringlib/localeutil.h',
  # 'Objects/stringlib/partition.h',
  # 'Objects/stringlib/replace.h',
  # 'Objects/stringlib/repr.h',
  # 'Objects/stringlib/split.h',
  # 'Objects/stringlib/stringdefs.h',
  # 'Objects/stringlib/transmogrify.h',
  # 'Objects/stringlib/ucs1lib.h',
  # 'Objects/stringlib/ucs2lib.h',
  # 'Objects/stringlib/ucs4lib.h',
  # 'Objects/stringlib/undef.h',
  # 'Objects/stringlib/unicode_format.h',
  # 'Objects/structseq.c',
  # 'Objects/tupleobject.c',
  # 'Objects/typeobject.c',
  # 'Objects/typevarobject.c',
  # 'Objects/unicodectype.c',
  # 'Objects/unicodeobject.c',
  # 'Objects/unicodetype_db.h',
  # 'Objects/unionobject.c',
  # 'Objects/weakrefobject.c',
  # 'PC/WinMain.c',
  # 'PC/_testconsole.c',
  # 'PC/clinic/_testconsole.c.h',
  # 'PC/clinic/_wmimodule.cpp.h',
  # 'PC/clinic/msvcrtmodule.c.h',
  # 'PC/clinic/winreg.c.h',
  # 'PC/clinic/winsound.c.h',
  # 'PC/config.c',
  # 'PC/config_minimal.c',
  # 'PC/dl_nt.c',
  # 'PC/errmap.h',
  # 'PC/frozen_dllmain.c',
  # 'PC/invalid_parameter_handler.c',
  # 'PC/launcher.c',
  # 'PC/launcher2.c',
  # 'PC/msvcrtmodule.c',
  # 'PC/python3dll.c',
  # 'PC/python_ver_rc.h',
  # 'PC/venvlauncher.c',
  # 'PC/winreg.c',
  # 'PC/winsound.c',
  'Parser/action_helpers.c',
  'Parser/lexer/buffer.c',
  'Parser/lexer/buffer.h',
  'Parser/lexer/lexer.c',
  'Parser/lexer/lexer.h',
  'Parser/lexer/state.c',
  'Parser/lexer/state.h',
  'Parser/myreadline.c',
  'Parser/parser.c',
  'Parser/peg_api.c',
  'Parser/pegen.c',
  'Parser/pegen.h',
  'Parser/pegen_errors.c',
  'Parser/string_parser.c',
  'Parser/string_parser.h',
  'Parser/token.c',
  'Parser/tokenizer/file_tokenizer.c',
  'Parser/tokenizer/helpers.c',
  'Parser/tokenizer/helpers.h',
  'Parser/tokenizer/readline_tokenizer.c',
  'Parser/tokenizer/string_tokenizer.c',
  'Parser/tokenizer/tokenizer.h',
  'Parser/tokenizer/utf8_tokenizer.c',
  # 'Programs/_bootstrap_python.c',
  # 'Programs/_freeze_module.c',
  # 'Programs/_testembed.c',
  # 'Programs/python.c',
  # 'Programs/test_frozenmain.h',
  'Python/Python-ast.c',
  'Python/Python-tokenize.c',
  'Python/_warnings.c',
  'Python/asdl.c',
  'Python/assemble.c',
  'Python/ast.c',
  'Python/ast_opt.c',
  'Python/ast_unparse.c',
  'Python/bltinmodule.c',
  'Python/bootstrap_hash.c',
  'Python/brc.c',
  'Python/bytecodes.c',
  'Python/ceval.c',
  'Python/ceval_gil.c',
  'Python/ceval_macros.h',
  'Python/clinic/Python-tokenize.c.h',
  'Python/clinic/_warnings.c.h',
  'Python/clinic/bltinmodule.c.h',
  'Python/clinic/context.c.h',
  'Python/clinic/import.c.h',
  'Python/clinic/instruction_sequence.c.h',
  'Python/clinic/instrumentation.c.h',
  'Python/clinic/marshal.c.h',
  'Python/clinic/sysmodule.c.h',
  'Python/clinic/traceback.c.h',
  'Python/codecs.c',
  'Python/codegen.c',
  'Python/compile.c',
  'Python/condvar.h',
  'Python/config_common.h',
  'Python/context.c',
  'Python/critical_section.c',
  'Python/crossinterp.c',
  'Python/crossinterp_data_lookup.h',
  'Python/crossinterp_exceptions.h',
  'Python/dtoa.c',
  'Python/dup2.c',
  'Python/dynamic_annotations.c',
  'Python/dynload_hpux.c',
  'Python/dynload_shlib.c',
  'Python/dynload_stub.c',
  'Python/dynload_win.c',
  'Python/emscripten_signal.c',
  'Python/emscripten_trampoline.c',
  'Python/errors.c',
  'Python/executor_cases.c.h',
  'Python/fileutils.c',
  'Python/flowgraph.c',
  'Python/formatter_unicode.c',
  'Python/frame.c',
  'Python/frozen.c',
  'Python/frozenmain.c',
  'Python/future.c',
  'Python/gc.c',
  'Python/gc_free_threading.c',
  'Python/gc_gil.c',
  'Python/generated_cases.c.h',
  'Python/getargs.c',
  'Python/getcompiler.c',
  'Python/getcopyright.c',
  'Python/getopt.c',
  'Python/getplatform.c',
  'Python/getversion.c',
  'Python/hamt.c',
  'Python/hashtable.c',
  'Python/import.c',
  'Python/importdl.c',
  'Python/index_pool.c',
  'Python/initconfig.c',
  'Python/instruction_sequence.c',
  'Python/instrumentation.c',
  'Python/interpconfig.c',
  'Python/intrinsics.c',
  'Python/jit.c',
  'Python/legacy_tracing.c',
  'Python/lock.c',
  'Python/marshal.c',
  'Python/modsupport.c',
  'Python/mysnprintf.c',
  'Python/mystrtoul.c',
  'Python/object_stack.c',
  'Python/opcode_targets.h',
  'Python/optimizer.c',
  'Python/optimizer_analysis.c',
  'Python/optimizer_bytecodes.c',
  'Python/optimizer_cases.c.h',
  'Python/optimizer_symbols.c',
  'Python/parking_lot.c',
  'Python/pathconfig.c',
  'Python/perf_jit_trampoline.c',
  'Python/perf_trampoline.c',
  'Python/preconfig.c',
  'Python/pyarena.c',
  'Python/pyctype.c',
  'Python/pyfpe.c',
  'Python/pyhash.c',
  'Python/pylifecycle.c',
  'Python/pymath.c',
  'Python/pystate.c',
  'Python/pystrcmp.c',
  'Python/pystrhex.c',
  'Python/pystrtod.c',
  'Python/pythonrun.c',
  'Python/pytime.c',
  'Python/qsbr.c',
  'Python/specialize.c',
  'Python/stdlib_module_names.h',
  'Python/structmember.c',
  'Python/suggestions.c',
  'Python/symtable.c',
  'Python/sysmodule.c',
  'Python/thread.c',
  'Python/thread_nt.h',
  'Python/thread_pthread.h',
  'Python/thread_pthread_stubs.h',
  'Python/traceback.c',
  'Python/tracemalloc.c',
  'Python/uniqueid.c',
)

py_c_args = []

libpython = library('python3',
  sources: py_sources,
  include_directories: py_include_dirs,
  c_args: py_c_args,
  install: true,
  version: meson.project_version(),
  soversion: '3')

python3_dep = declare_dependency(
  include_directories: include_directories('Include'),
  link_with: libpython)

python3 = executable('python3',
  sources: 'Programs/python.c',
  dependencies: python3_dep,
  install: true)
